<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:iconifiedByDefault="false"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <!-- Will be added later -->
    <item android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always"
        app:iconifiedByDefault="true">
        <menu>
            <item android:title="@string/department"
                android:id="@+id/filter_department"/>
        </menu>
    </item>
    <item android:id="@+id/action_help"
        android:orderInCategory="101"
        android:title="@string/help"
        android:actionViewClass="android.widget.ImageButton"
        android:icon="@drawable/ic_help_outline_white_24dp"
        app:showAsAction="ifRoom"/>

</menu>