<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="false">

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_picture_as_pdf_white_24dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/activity_default_margin_big"
        android:id="@+id/btn_save_pdf" />

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_default_margin_small">

        <TextView
            android:text="@string/total_sales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="@dimen/activity_default_margin_small"
            android:drawableStart="@drawable/ic_attach_money_white_24dp"
            android:id="@+id/txt_sale_total" />

        <include layout="@layout/include_space_8dp"/>

        <TextView
            android:text="@string/purchases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="@dimen/activity_default_margin_small"
            android:drawableStart="@drawable/ic_attach_money_white_24dp"
            android:id="@+id/txt_total_purchases" />
        <include layout="@layout/include_space_8dp"/>

        <TextView
            android:text="@string/total_earnings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="@dimen/activity_default_margin_small"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_attach_money_white_24dp"
            android:id="@+id/txt_total_earnings" />
        <include layout="@layout/include_space_8dp"/>

        <TextView
            android:text="@string/recorded_ticket_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="@dimen/activity_default_margin_small"
            android:drawableStart="@drawable/ic_library_books_white_24dp"
            android:id="@+id/txt_sale_ticket" />
        <include layout="@layout/include_space_8dp"/>

        <TextView
            android:text="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="@dimen/activity_default_margin_small"
            android:drawableStart="@drawable/ic_date_range_white_24dp"
            android:id="@+id/btn_date" />
        <include layout="@layout/include_space_8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:padding="@dimen/activity_default_margin_small"
            android:drawableStart="@drawable/ic_search_white_24dp"
            android:id="@+id/btn_see_details"
            android:text="@string/see_details" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

